index e css: jumbo img

--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,18 @@
     width: 80%;
     margin: 0 auto;
 }
+.containersmall{
+    width: 65%;
+    margin: 0 auto;
+}
 body{
     min-width: 1200px;
 }
-
+.clearfix::after{
+    content: '';
+    display: table;
+    clear: both;
+}
 /* utility */
 /* btn color #0061ff
 background color #b4d0e7 */
@@ -20,13 +28,17 @@ background color #b4d0e7 */
 /* header */
 
 /* nav */
-
+header{
+    line-height: 100px;
+}
 nav{
     width: 100%;
-    margin: 30px;
+    padding-left: 50px;
     position: fixed;
     background-color: white;
     top: 0;
+    min-width: 1200px;
+    z-index: 1000;
 }
 .logo{
     display: inline-block;
@@ -37,7 +49,7 @@ nav{
 .left-side{
     display: inline-block;
     text-align: center;
-    padding-left: 80px;
+    padding-left: 40px;
 }
 .left-side a{
     padding-right: 30px;
@@ -47,7 +59,7 @@ nav{
 .right-side{
     float: right;
     text-align: center;
-    padding-right: 80px;
+    padding-right: 40px;
 }
 .right-side a{
     padding-right: 30px;
@@ -66,4 +78,165 @@ nav{
 /* jumbo */
 .jumbo{
     background-color: #b4d0e7;
+    height: 780px;
+    margin: 100px 0;
 }
+.text-jumbo h1{
+    font-size: 89px;
+    padding-top: 75px;
+}
+.p-jumbo{
+    width: 35%;
+    float: left;
+    padding-top: 40px;
+}
+.jumboimg{
+    width: 65%;
+    float: right;
+}
+.jumboimg img{
+    padding-top: 40px;
+    width: 900px;
+    margin-left: 20px;
+}
+.p-jumbo .btnuni a{
+    color: white;
+    text-decoration: none;
+    background-color: #0061ff;
+    padding: 10px 15px;
+}
+.p-jumbo .btnuni{
+    margin-top: 40px;
+}
+.p-jumbo p:last-child{
+    margin-top: 20px;
+}
+.ctext{
+    font-size: 28px;
+    padding-top: 120px;
+}
+/* radio */
+.control {
+    font-family: arial;
+    display: inline-block;
+    position: relative;
+    padding-left: 30px;
+    margin-bottom: 5px;
+    padding-top: 3px;
+    cursor: pointer;
+    font-size: 16px;
+}
+    .control input {
+        position: absolute;
+        z-index: -1;
+        opacity: 0;
+    }
+.control_indicator {
+    position: absolute;
+    top: 2px;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background: #e6e6e6;
+    border: 0px solid #000000;
+    border-radius: undefinedpx;
+}
+.control:hover input ~ .control_indicator,
+.control input:focus ~ .control_indicator {
+    background: #cccccc;
+}
+
+.control input:checked ~ .control_indicator {
+    background: #2aa1c0;
+}
+.control:hover input:not([disabled]):checked ~ .control_indicator,
+.control input:checked:focus ~ .control_indicator {
+    background: #0e6647d;
+}
+.control input:disabled ~ .control_indicator {
+    background: #e6e6e6;
+    opacity: 0.6;
+    pointer-events: none;
+}
+.control_indicator:after {
+    box-sizing: unset;
+    content: '';
+    position: absolute;
+    display: none;
+}
+.control input:checked ~ .control_indicator:after {
+    display: block;
+}
+.control-radio .control_indicator {
+    border-radius: 50%;
+}
+
+.control-radio .control_indicator:after {
+    left: 6px;
+    top: 6px;
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
+    background: #ffffff;
+    transition: background 250ms;
+}
+.control-radio input:disabled ~ .control_indicator:after {
+    background: #7b7b7b;
+}.control-radio .control_indicator::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 4.5rem;
+    height: 4.5rem;
+    margin-left: -1.3rem;
+    margin-top: -1.3rem;
+    background: #2aa1c0;
+    border-radius: 3rem;
+    opacity: 0.6;
+    z-index: 99999;
+    transform: scale(0);
+}
+@keyframes s-ripple {
+    0% {
+        opacity: 0;
+        transform: scale(0);
+    }
+    20% {
+        transform: scale(1);
+    }
+    100% {
+        opacity: 0.01;
+        transform: scale(1);
+    }
+}
+@keyframes s-ripple-dup {
+   0% {
+       transform: scale(0);
+    }
+   30% {
+        transform: scale(1);
+    }
+    60% {
+        transform: scale(1);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1);
+    }
+}
+.control-radio input + .control_indicator::before {
+    animation: s-ripple 250ms ease-out;
+}
+.control-radio input:checked + .control_indicator::before {
+    animation-name: s-ripple-dup;
+}
+.control-group{
+    padding-top: 50px;   
+}
+.control{
+    padding-right: 20px;
+}
+/* /radio */
+
