--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,19 @@ nav{
     width: 65%;
     float: right;
 }
+.p-jumbo a{
+    color: black;
+    text-decoration: none;
+}
+.p-jumbo span{
+    font-size: 40px;
+}
+.reg{
+    padding-bottom: 45px;
+}
 .jumboimg img{
     padding-top: 40px;
-    width: 900px;
+    max-width: 100%;
     margin-left: 20px;
 }
 .p-jumbo .btnuni a{
@@ -110,6 +120,7 @@ nav{
 }
 .p-jumbo .btnuni{
     margin-top: 40px;
+    margin-bottom: 30px;
 }
 .p-jumbo p:last-child{
     margin-top: 20px;
@@ -238,6 +249,7 @@ nav{
 }
 .control-group{
     padding-top: 50px;   
+    padding-bottom: 25px;
 }
 .control{
     padding-right: 20px;
@@ -247,12 +259,12 @@ nav{
 .column {
     float: left;
     width: calc(100% / 3 - 60px);
-    padding: 0 40px 140px;
+    padding: 0 28px ;
     line-height: 45px;
-    margin: 28px;
+    height: 1300px;
 }
-.column.longer{
-    padding-bottom: 230px;
+.column.center{
+    margin: 0 90px;
 }
 .row:after {
     content: "";
@@ -275,6 +287,12 @@ ul{
     list-style-type: none;
     padding-bottom: 34px;
 }
+.check ul{
+    padding-left: -20px;
+}
+.check.recheck{
+    padding-left: 20px;
+}
 .spazio{
     padding-bottom: 35px;
 }
@@ -293,6 +311,7 @@ h5{
     content: "\2714";
     color: blue;
     padding-right: 7px;
+    margin-left: -20px;
 } 
 .centeredcolumn h4{
     width: 100%;
@@ -329,11 +348,13 @@ h5{
 .raw.debug{
     width: 65%;
     margin: 0 auto;
+    margin-top: 70px;
 }
 .guys{
     width: 50%;
     float: left;
     padding-top: 150px;
+    padding-bottom: 150px;
 }
 .right-text{
     width: 50%;
@@ -353,4 +374,18 @@ h5{
     text-decoration: none;
     color: black;
     border: 1px solid black;
+}
+/* section card */
+.card{
+    width: calc(100% / 3);
+    float: left;
+    padding-right: 82px;
+    padding-bottom: 85px;
+    padding-top: 53px;
+}
+.foto img{
+    width: 350px;
+}
+.card h1{
+    padding-bottom: 25px;
 }
