--- a/css/style.css
+++ b/css/style.css
@@ -449,21 +449,25 @@ h5{
     position: relative;
     top: 42%;
     left: 25%;
+    filter: invert(100%);
 }
 .ari img{
     position: relative;
     top: 38%;
     left: 25%;
+    filter: invert(100%);
 }
 .asu img{
     position: relative;
     top: 31%;
     left: 26%;
+    filter: invert(100%);
 }
 .pos img{
     position: relative;
     top: 46%;
     left: 25%;
+    filter: invert(100%);
 }
 .container img{
     padding-top: 70px;
@@ -615,4 +619,46 @@ h3{
 }
 .fa-earth-americas{
     color: #7b7b7b;
+}
+li a{
+    color: white;
+    text-decoration: none;
+}
+
+
+.accordion {
+    background-color: rgb(255, 255, 255);
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+  }
+  
+  .active, .accordion:hover {
+    background-color: #ccc; 
+  }
+  
+  .panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+  }
+
+.accordion{
+    padding-left: 0;
+    border-top: 1px solid rgb(187, 187, 187);
+
+}
+.spazio{
+    margin-top: 95px;
+    margin-bottom: 60px;
+}
+.accordion.brd{
+    border-bottom: 1px solid rgb(187, 187, 187);
 }
