--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 }
 body{
     min-width: 1200px;
+    scroll-behavior: smooth;
 }
 .clearfix::after{
     content: '';
@@ -55,7 +56,7 @@ nav{
     padding-left: 40px;
 }
 .left-side a{
-    padding-right: 30px;
+    padding: 38px 10px;
     color: black;
     text-decoration: none;
 }
@@ -65,7 +66,7 @@ nav{
     padding-right: 40px;
 }
 .right-side a{
-    padding-right: 30px;
+    padding: 38px 10px;
     color: black;
     text-decoration: none;
 }
@@ -76,6 +77,41 @@ nav{
     background-color: #0061ff;
     text-align: center;
     padding: 7px 30px;
+}
+.hoverborder{
+    border-bottom: 1px solid hidden;
+    display: inline-block;
+}
+nav a:hover{
+    border-bottom: 1px solid black;
+}
+.btn.small{
+    padding: 10px 15px;
+}
+.dropdown{
+    display: inline-block;
+    position: relative;
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    left: -36px;
+    top: 99px;
+    background-color: white;
+    border: 1px solid rgb(233, 233, 233);
+}
+.dropdown:hover .dropdown-content{
+    display: inline-block;
+}
+.dropdown:hover body {
+    background-color: black;
+    
+    
+}
+.opacity{
+    width: 100%;
+    color: rgba(0, 0, 0, 1)
 }
 
 /* jumbo */
@@ -261,7 +297,7 @@ nav{
     width: calc(100% / 3 - 60px);
     padding: 0 28px ;
     line-height: 45px;
-    height: 1300px;
+    min-height: 1400px;
 }
 .column.center{
     margin: 0 90px;
@@ -497,7 +533,7 @@ h5{
     position: relative;
     bottom: 100px;
 }
-.containersmall a{
+.btext a{
     text-decoration: none;
     background-color: white;
     color: #000000;
@@ -655,7 +691,7 @@ li a{
     border-top: 1px solid rgb(187, 187, 187);
 
 }
-.spazio{
+.spazioo{
     margin-top: 95px;
     margin-bottom: 60px;
 }
